User checkpoint: Update predictions.css: Change checked checkbox background color to primary blue.

--- a/static/css/predictions.css
+++ b/static/css/predictions.css
@@ -81,7 +81,7 @@
 }
 
 .form-check-input:checked {
-  background-color: var(--primary-red);
+  background-color: var(--primary-blue);
 }
 
 .form-check-input::after {
