User checkpoint: Refactor statistics page layout: Removed unnecessary container, improved styling.

--- a/static/css/statistics.css
+++ b/static/css/statistics.css
@@ -21,7 +21,7 @@
 }
 
 /* Contenedor principal */
-.main-content.statistics-wrapper {
+.statistics-wrapper {
   min-height: calc(100vh - var(--nav-height));
   padding: 1.5rem;
   background-color: var(--statistics-secondary);
