--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content statistics-wrapper py-4 mb-5">
+<div class="statistics-wrapper py-4">
   <div class="container-fluid statistics-container">
     <!-- Encabezado de Estadísticas -->
     <div class="statistics-header mb-4">
